# ipmi-fan-control

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docker-release.yml
ipmi_fan_control/: __init__.py  __main__.py  cli.py  enhanced_logger.py  ipmi.py  ipmitool.py  pid.py  types.py
scripts/: check.sh  docker-run.sh  get_version.sh  install.sh  install_deps.sh  lint.sh  run_tests.sh  test_install.sh
tests/: conftest.py  test_cli.py  test_enhanced_logger.py  test_ipmi_fan_control.py  test_ipmitool.py  test_main.py  test_pid_controller.py
